--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepaeg": "http://KhanhNhat242.github.io/FrontendWebH2.2",
+  "homepage": "https://aiclubiuh.com",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -25,8 +25,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
